fix: 修复更新检查报错过长与更新源仓库指向错误
- 默认发布源改为 yanhaishui/LiveTalking，避免误指向 upstream

- 更新检查新增友好错误提示（404/鉴权/网络）并避免堆栈直接展示

- 增加更新源配置检测，未配置时给出明确提示

- 缩短顶部更新状态文案，避免页面被长文本挤乱

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lipku/LiveTalking.git"
+    "url": "https://github.com/yanhaishui/LiveTalking.git"
   },
   "private": true,
   "scripts": {
